[package]
name = "ranges"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false
